codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__feedback_good_result_consent_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Upload logs?

  The following files will be sent:
    • codex-logs.log
    • codex-connectivity-diagnostics.txt

› 1. Yes  Share the current mcodex session logs with the team for
          troubleshooting.
  2. No

  Press enter to confirm or esc to go back
